# Gene_Editor

./: .gitignore  BUILD.md  README.md  build-icons.js  build-linux.sh  build-windows.bat  index.html  package-lock.json  package.json  setup-and-build.bat  switch-to-msvc.bat
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CircularPlasmid.tsx  EnzymeList.tsx  FeatureList.tsx  LinearSequence.tsx  SequenceToolbar.tsx
src/hooks/: useDNASequence.ts
src/types/: dna.ts
src/utils/: genbankParser.ts
