[package]
name = "gene-editor"
version = "0.2.9"
description = "A powerful DNA sequence viewer and editor"
authors = ["Gene Editor Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "gene_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
